made a func. go back button

--- a/html-files/properties-all.html
+++ b/html-files/properties-all.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <title>All Properties on Market</title>
+    <title>All Properties on the Market</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             <div class="top-filter-rent">
 
                 <div class="gobackbutton">
-                    <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                    <button onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Go Back</button>
                 </div>
 
                 <p>You can personalize your search here</p>
@@ -151,7 +151,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap1.webp" alt="">
+                                    <img src="/photos/ap1.webp" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Hudsons Apartments</h2>
@@ -167,7 +167,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/house1.jpeg" alt="">
+                                    <img src="/photos/house1.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -183,7 +183,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap2.jpg" alt="">
+                                    <img src="/photos/ap2.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -199,7 +199,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/house2.jpeg" alt="">
+                                    <img src="/photos/house2.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -215,7 +215,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/house3.jpeg" alt="">
+                                    <img src="/photos/house3.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -231,7 +231,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/lasseap.jpg" alt="">
+                                    <img src="/photos/lasseap.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Lǎoshī</h2>
@@ -247,7 +247,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap5.jpg" alt="">
+                                    <img src="/photos/ap5.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -263,7 +263,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/naples-house-one.jpeg" alt="">
+                                    <img src="/photos/naples-house-one.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -279,7 +279,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/luxury-house.jpeg" alt="">
+                                    <img src="/photos/luxury-house.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -295,7 +295,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap10.jpg" alt="">
+                                    <img src="/photos/ap10.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -311,7 +311,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/ap6.jpg" alt="">
+                                    <img src="/photos/ap6.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -327,7 +327,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/house5.jpeg" alt="">
+                                    <img src="/photos/house5.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -343,7 +343,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap13.jpg" alt="">
+                                    <img src="/photos/ap13.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -359,7 +359,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/florence-house.jpeg" alt="">
+                                    <img src="/photos/florence-house.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -375,7 +375,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap14.webp" alt="">
+                                    <img src="/photos/ap14.webp" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -391,7 +391,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap9.jpg" alt="">
+                                    <img src="/photos/ap9.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -407,7 +407,7 @@
                                     <div class="category-house">
                                         <p>House</p>
                                     </div>
-                                    <img src="/photos/venice-house-sell.jpeg" alt="">
+                                    <img src="/photos/venice-house-sell.jpeg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -423,7 +423,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap11.jpg" alt="">
+                                    <img src="/photos/ap11.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
@@ -439,7 +439,7 @@
                                     <div class="category">
                                         <p>Apartment</p>
                                     </div>
-                                    <img src="/photos/ap12.jpg" alt="">
+                                    <img src="/photos/ap12.jpg" alt="" width="485px"height="350px;">
                                 </div>
                                 <div class="property-text">
                                     <h2>Property Name</h2>
