--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <title>Rent Page Real Estate Agency</title>
+    <title>Rent a Property</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             <div class="top-filter-rent">
 
                 <div class="gobackbutton">
-                    <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                    <button onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Go Back</button>
                 </div>
 
                 <p>You can personalize your search here</p>
