--- a/html-files/index.html
+++ b/html-files/index.html
@@ -88,8 +88,8 @@
                     <a href="property-detail.html">
                         <img src="/photos/house1.jpeg" alt="">
                         <div class="property-text">
-                            <p>Property Name</p>
-                            <span>Price</span>
+                            <p>Riverdale</p>
+                            <span>290 000$</span>
                         </div>
                     </a>
                 </div>
@@ -97,8 +97,8 @@
                     <a href="property-detail.html">
                         <img src="/photos/house2.jpeg" alt="">
                         <div class="property-text">
-                            <p>Property Name</p>
-                            <span>Price</span>
+                            <p>Radahns Mansion</p>
+                            <span>875 000$</span>
                         </div>
                     </a>
                 </div>
@@ -106,8 +106,8 @@
                     <a href="property-detail.html">
                         <img src="/photos/house3.jpeg" alt="">
                         <div class="property-text">
-                            <p>Property Name</p>
-                            <span>Price</span>
+                            <p>Melenias Valley</p>
+                            <span>560 000$</span>
                         </div>
                     </a>
                 </div>
@@ -115,8 +115,8 @@
                     <a href="property-detail.html">
                         <img src="/photos/house4.jpeg" alt="">
                         <div class="property-text">
-                            <p>Property Name</p>
-                            <span>Price</span>
+                            <p>Midtun 3B</p>
+                            <span>190 000$</span>
                         </div>
                     </a>
                 </div>
@@ -129,8 +129,8 @@
                         <div id="last-property">
                             <img src="/photos/house5.jpeg" alt="">
                             <div class="property-text">
-                                <p>Property Name</p>
-                                <span>Price</span>
+                                <p>Salhusvegen 21C</p>
+                                <span>220 000$</span>
                             </div>
                         </div>
                     </a>
