updated the side filter
the side filters on properties-all.html and rent.html is now fixed on the side, and the properties dont get smaller than 350px

--- a/html-files/properties-all.html
+++ b/html-files/properties-all.html
@@ -3,6 +3,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
     <link rel="stylesheet" href="../css-files\properties-all.css">
+    <link rel="stylesheet" href="../css-files/side-filters.css">
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -45,8 +46,6 @@
                 <div class="gobackbutton">
                     <button onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Go Back</button>
                 </div>
-
-                <p>You can personalize your search here</p>
 
                 <h2>Property Type:</h2>
                 <div class="filters">
