--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -3,6 +3,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
     <link rel="stylesheet" href="../css-files\rent.css">
+    <link rel="stylesheet" href="../css-files/side-filters.css">
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -46,7 +47,7 @@
                     <button onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Go Back</button>
                 </div>
 
-                <p>You can personalize your search here</p>
+                <p>You can personalize <br> your search here</p>
 
                 <h2>Published:</h2>
                 <div class="filters">
