fixed sell page
im gonna tweak it just a bit more though

--- a/html-files/sell.html
+++ b/html-files/sell.html
@@ -75,6 +75,7 @@
                 </div>
     
                 <div class="property-user-inputs">
+
                     <div class="property-user-inputs-content">
 
                         <div class="filloutform-2">
@@ -97,7 +98,7 @@
                             <div class="prop-desc">
                                 <h2>Description</h2>
                                 <label for="Property Name">
-                                    <input type="text" name="" id="" placeholder="Use as many words as you wish, but describing your property in details can help you attract potential buyers/renters..." class="property-info-description">
+                                    <input type="text" name="" id="" placeholder="Use as many words as you wish..." class="property-info-description">
                                 </label>
                             </div>
 
