--- a/html-files/index.html
+++ b/html-files/index.html
@@ -222,6 +222,11 @@
 
     <!--Footer-->
     <footer class="page-footer">
+        <div id="footer-info-box">
+            <h1>Have Any Questions</h1>
+            <p>With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You The Best Of The Best In The Market.</p>
+            <p>Real Estate Agency Have Decades Worth Of Experience, We Have The Best Property Brokers, The Best Construction Workers, And The Best Houses And Apartment</p>
+        </div>
         <div class="footer-about">
             <p>About Us</p>
             <a href="./about.html">About Us</a>
