--- a/html-files/index.html
+++ b/html-files/index.html
@@ -227,6 +227,22 @@
             <p>With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You The Best Of The Best In The Market.</p>
             <p>Real Estate Agency Have Decades Worth Of Experience, We Have The Best Property Brokers, The Best Construction Workers, And The Best Houses And Apartment</p>
         </div>
+        <div id="footer-call-icon-box">
+            <div id="footer-call-icon">
+                <img src="../media/icons8-call-50.png">
+            </div>
+            <div id="footer-call-icon-text">
+                <p>123 456 789</p>
+            </div>
+        </div>
+        <div id="footer-mall-icon-box">
+            <div id="footer-mail-icom">
+                <img src="../media/icons8-email-50.png">
+            </div>
+            <div id="footer-mail-icon-text">
+                <p>RealEstateAgency@gmail.com</p>
+            </div>
+        </div>
         <div class="footer-about">
             <p>About Us</p>
             <a href="./about.html">About Us</a>
