--- a/html-files/index.html
+++ b/html-files/index.html
@@ -243,6 +243,14 @@
                 <p>RealEstateAgency@gmail.com</p>
             </div>
         </div>
+        <div id="footer-about-box">
+            <h1>About Real Estate Agency</h1>
+            <a href="./about.html">About Us</a>
+            <br>
+            <a href="./our-misjion.html">Our Mision</a>
+        </div>
+
+
         <div class="footer-about">
             <p>About Us</p>
             <a href="./about.html">About Us</a>
