--- a/html-files/index.html
+++ b/html-files/index.html
@@ -248,33 +248,31 @@
             <a href="./about.html">About Us</a>
             <br>
             <a href="./our-misjion.html">Our Mision</a>
-        </div>
-
-
-        <div class="footer-about">
-            <p>About Us</p>
-            <a href="./about.html">About Us</a>
             <br>
-            <a href="./contact.html">Contact Us</a>
+            <a href="./history.html">Real Estate Agency Background</a>
         </div>
-        <div class="footer-work">
-            <p>Our Work</p>
-            <a href="./staff.html">Our Staff</a>
+        <div id="footer-work-box">
+            <h1>Real Estate Agency Work</h1>
+            <a href="./staff.html">Our Team</a>
             <br>
-            <a href="./work-for-us.html">Work</a>
+            <a href="./work-for-us.html">Work For Us</a>
+            <br>
+            <a href="./faq.html">FAQ</a>
         </div>
-        <div class="footer-services-1">
-            <p>Buy Or Sell</p>
+        <div id="footer-services-box">
+            <h1>Our Services</h1>
             <a href="./buy.html">Buy</a>
             <br>
             <a href="./sell.html">Sell</a>
-        </div>
-        <div class="footer-services-2">
-            <p>Build Or Rent</p>
-            <a href="./construction.html">Build</a>
             <br>
             <a href="./rent.html">Rent</a>
+            <br>
+            <a href="./construction.html">Build</a>
         </div>
+
+
+
+
         <div class="social-media">
             <p>Social Media</p>
             <a href="https://www.instagram.com/noroff/">
