--- a/html-files/index.html
+++ b/html-files/index.html
@@ -269,12 +269,8 @@
             <br>
             <a href="./construction.html">Build</a>
         </div>
-
-
-
-
-        <div class="social-media">
-            <p>Social Media</p>
+        <div id="footer-social-media-box">
+            <h1>Our Social Media</h1>
             <a href="https://www.instagram.com/noroff/">
                 <img src="../media/instagram.png">
             </a>
