--- a/html-files/index.html
+++ b/html-files/index.html
@@ -255,7 +255,9 @@
             <h1>Real Estate Agency Work</h1>
             <a href="./staff.html">Our Team</a>
             <br>
-            <a href="./work-for-us.html">Work For Us</a>
+            <a href="./work-for-us.html">Carrer</a>
+            <br>
+            <a href="./vision-for-the-future.html">Our Future Vision</a>
             <br>
             <a href="./faq.html">FAQ</a>
         </div>
@@ -268,6 +270,13 @@
             <a href="./rent.html">Rent</a>
             <br>
             <a href="./construction.html">Build</a>
+        </div>
+        <div id="footer-contact-box">
+            <h1>Contact</h1>
+            <a href="./contact.html">Contact Us</a>
+            <br>
+            <a href="./login.html">Login / Create Account</a>
+            <br>
         </div>
         <div id="footer-social-media-box">
             <h1>Our Social Media</h1>
