--- a/html-files/index.html
+++ b/html-files/index.html
@@ -250,6 +250,8 @@
             <a href="./our-misjion.html">Our Mision</a>
             <br>
             <a href="./history.html">Real Estate Agency Background</a>
+            <br>
+            <a href="./faq.html">FAQ</a>
         </div>
         <div id="footer-work-box">
             <h1>Real Estate Agency Work</h1>
@@ -277,6 +279,9 @@
             <br>
             <a href="./login.html">Login / Create Account</a>
             <br>
+            <a href="our-misjion.html">Our Mision</a>
+            <br>
+            <a href="faq.html">FAQ</a>
         </div>
         <div id="footer-social-media-box">
             <h1>Our Social Media</h1>
