--- a/html-files/index.html
+++ b/html-files/index.html
@@ -249,8 +249,9 @@
             <br>
             <a href="./our-misjion.html">Our Mision</a>
             <br>
-            <a href="./history.html">Real Estate Agency Background</a>
-            <br>
+            <div id="footer-longer-text">
+                <a href="./history.html">Real Estate Agency Background</a>
+            </div>
             <a href="./faq.html">FAQ</a>
         </div>
         <div id="footer-work-box">
