--- a/html-files/index.html
+++ b/html-files/index.html
@@ -249,6 +249,7 @@
             <br>
             <a href="./our-misjion.html">Our Mision</a>
             <br>
+            <a href="login.html">Login / Create Account</a>
             <div id="footer-longer-text">
                 <a href="./history.html">Real Estate Agency Background</a>
             </div>
@@ -256,6 +257,8 @@
         </div>
         <div id="footer-work-box">
             <h1>Real Estate Agency Work</h1>
+            <a href="./contact.html">Contact Us</a>
+            <br>
             <a href="./staff.html">Our Team</a>
             <br>
             <a href="./work-for-us.html">Carrer</a>
@@ -273,16 +276,6 @@
             <a href="./rent.html">Rent</a>
             <br>
             <a href="./construction.html">Build</a>
-        </div>
-        <div id="footer-contact-box">
-            <h1>Contact</h1>
-            <a href="./contact.html">Contact Us</a>
-            <br>
-            <a href="./login.html">Login / Create Account</a>
-            <br>
-            <a href="our-misjion.html">Our Mision</a>
-            <br>
-            <a href="faq.html">FAQ</a>
         </div>
         <div id="footer-social-media-box">
             <h1>Our Social Media</h1>
