--- a/html-files/index.html
+++ b/html-files/index.html
@@ -249,11 +249,15 @@
             <br>
             <a href="./our-misjion.html">Our Mision</a>
             <br>
-            <a href="login.html">Login / Create Account</a>
+            <div id="footer-middle-text">
+                <a href="login.html">Login / Create Account</a>
+            </div>
             <div id="footer-longer-text">
                 <a href="./history.html">Real Estate Agency Background</a>
             </div>
-            <a href="./faq.html">FAQ</a>
+            <div id="footer-last-text">
+                <a href="./faq.html">FAQ</a>
+            </div>
         </div>
         <div id="footer-work-box">
             <h1>Real Estate Agency Work</h1>
