--- a/html-files/index.html
+++ b/html-files/index.html
@@ -267,9 +267,12 @@
             <br>
             <a href="./work-for-us.html">Carrer</a>
             <br>
-            <a href="./vision-for-the-future.html">Our Future Vision</a>
-            <br>
-            <a href="./faq.html">FAQ</a>
+            <div id="footer-middle-text-work">
+                <a href="./vision-for-the-future.html">Our Future Vision</a>
+            </div>
+            <div id="footer-last-text-work">
+                <a href="./faq.html">FAQ</a>
+            </div>
         </div>
         <div id="footer-services-box">
             <h1>Our Services</h1>
