--- a/html-files/staff.html
+++ b/html-files/staff.html
@@ -34,48 +34,71 @@
     <main class="page-body">
     </main>
 
-    <!--Footer-->
-    <footer class="page-footer">
-        <div class="footer-about">
-            <p>About Us</p>
-            <a href="./about.html">About Us</a>
-            <br>
-            <a href="./contact.html">Contact Us</a>
+<!--Footer-->
+<footer class="page-footer">
+    <div id="footer-info-box">
+        <h1>Have Any Questions</h1>
+        <p>With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You The Best Of The Best In The Market.</p>
+        <p>Real Estate Agency Have Decades Worth Of Experience, We Have The Best Property Brokers, The Best Construction Workers, And The Best Houses And Apartment</p>
+    </div>
+    <div id="footer-call-icon-box">
+        <div id="footer-call-icon">
+            <img src="../media/icons8-call-50.png">
         </div>
-        <div class="footer-work">
-            <p>Our Work</p>
-            <a href="./staff.html">Our Staff</a>
-            <br>
-            <a href="./work-for-us.html">Work</a>
+        <div id="footer-call-icon-text">
+            <p>123 456 789</p>
         </div>
-        <div class="footer-services-1">
-            <p>Buy Or Sell</p>
-            <a href="./buy.html">Buy</a>
-            <br>
-            <a href="./sell.html">Sell</a>
+    </div>
+    <div id="footer-mall-icon-box">
+        <div id="footer-mail-icom">
+            <img src="../media/icons8-email-50.png">
         </div>
-        <div class="footer-services-2">
-            <p>Build Or Rent</p>
-            <a href="./construction.html">Build</a>
-            <br>
-            <a href="./rent.html">Rent</a>
+        <div id="footer-mail-icon-text">
+            <p>RealEstateAgency@gmail.com</p>
         </div>
-        <div class="social-media">
-            <p>Social Media</p>
-            <a href="https://www.instagram.com/noroff/">
-                <img src="../media/instagram.png">
-            </a>
-            <a href="https://www.facebook.com/noroff">
-                <img src="../media/facebook.png">
-            </a>
-            <a href="https://www.youtube.com/channel/UCyDPAsKvRn8fkEM8IkQeLSQ">
-                <img src="../media/yotube.png">
-            </a>
-            <a href="https://twitter.com/noroff?lang=en">
-                <img src="../media/twiiter.png">
-            </a>
+    </div>
+    <div id="footer-about-box">
+        <h1>About Real Estate Agency</h1>
+        <a href="./about.html">About Us</a>
+        <br>
+        <a href="./our-misjion.html">Our Mision</a>
+        <br>
+        <div id="footer-middle-text">
+            <a href="login.html">Login / Create Account</a>
         </div>
-    </footer>
+        <div id="footer-longer-text">
+            <a href="./history.html">Real Estate Agency Background</a>
+        </div>
+        <div id="footer-last-text">
+            <a href="./faq.html">FAQ</a>
+        </div>
+    </div>
+    <div id="footer-work-box">
+        <h1>Real Estate Agency Work</h1>
+        <a href="./contact.html">Contact Us</a>
+        <br>
+        <a href="./staff.html">Our Team</a>
+        <br>
+        <a href="./work-for-us.html">Carrer</a>
+        <br>
+        <div id="footer-middle-text-work">
+            <a href="./vision-for-the-future.html">Our Future Vision</a>
+        </div>
+        <div id="footer-last-text-work">
+            <a href="./faq.html">FAQ</a>
+        </div>
+    </div>
+    <div id="footer-services-box">
+        <h1>Our Services</h1>
+        <a href="./buy.html">Buy</a>
+        <br>
+        <a href="./sell.html">Sell</a>
+        <br>
+        <a href="./rent.html">Rent</a>
+        <br>
+        <a href="./construction.html">Build</a>
+    </div>
+</footer>
 </body>
 
 </html>
