--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -133,6 +133,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-zurich wrap">
+            <h2>Zurich Properties</h2>
+            <div class="zurich-proerpties">
+                <div class="estate-photo">
+                    <img src="../photos/eight.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>987 Old Valyria</h1>
+                        <p>Highly Modern Archtecture, 5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Wine Celler, Laudry Room, 3 Balconies </p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>&7.980.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
