--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -155,6 +155,23 @@
             </div>
             <div class="properties-zurich">
                 <div class="estate-photo">
+                    <img src="../photos/eleven.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>333 Bravos</h1>
+                        <p>Swiss Architecture, 4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Laudry room, Balcony</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-zurich">
+                <div class="estate-photo">
                     
                 </div>
             </div>
