--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -160,7 +160,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>333 Bravos</h1>
-                        <p>Swiss Architecture, 4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Laudry room, Balcony</p>
+                        <p>Swiss Architecture, 4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Laudry Room, Balcony</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$5.999.000</b></p>
@@ -172,7 +172,29 @@
             </div>
             <div class="property-zurich">
                 <div class="estate-photo">
-                    
+                    <img src="../photos/fifteen.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>212 Oros</h1>
+                        <p>5 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Laudry Room, 1 Office Room, Royal Archtecture, Balcony </p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.960.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-zurich-house">
+                <div class="estate-photo">
+                    <img src="../photos/five.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1></h1>
+                    </div>
                 </div>
             </div>
         </div>
