--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -193,7 +193,14 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1></h1>
+                        <h1>484 Pentos</h1>
+                        <p>Highly Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Rooom, Office Rome, Dinning Room, 2 Cars Garage, Library</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.587.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
