--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -204,6 +204,11 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-zurich-last">
+                <div class="estate-photo">
+                    <img src="../photos/four.jpeg">
+                </div>
+            </div>
         </div>
     </main>
 
