--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -208,6 +208,18 @@
                 <div class="estate-photo">
                     <img src="../photos/four.jpeg">
                 </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>291 Free Cities</h1>
+                        <p>7 Bedrooms, 9 Bathrooms, Kitchen, BBQ Area, Pool, Kitchen, Living Room, Dinning Room, Office Room, Gated, Balcony</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
