--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -222,6 +222,32 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-bern wrap">
+            <h2>Bern Properties</h2>
+            <div class="property-bern">
+                <div class="estate-photo">
+                    <img src="../photos/fourteen.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>649 Volantis</h1>
+                        <p>Highly Modern, 5 Bedrooms, 8 Bathrooms, Kitchen, Pool, BBQ Area, Living Room, Dinning Rooom, Outdoor Garage, Balcony</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-bern">
+                <div class="estate-photo">
+                    
+                </div>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
