--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -244,9 +244,56 @@
             </div>
             <div class="properties-bern">
                 <div class="estate-photo">
-                    
+                    <img src="../photos/nine.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>960 Alexandria</h1>
+                        <p>Highly Modern, 4 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Pool, BBQ Area, Outfoor Garage, Balcony </p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.760.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
+            <div class="properties-bern-house">
+                <div class="estate-photo">
+                    <img src="../photos/one.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Hiltop</h1>
+                        <p>Balocny, Pool, BBQ Area, Kitchen, Living Room, Dinning Room, 6 Bedrooms, 7 Bathrooms, Highly Modern, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$6.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-bern-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/six.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>376 Kingdom</h1>
+                        <p>8 Bedrooms, 10 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Basement, Attic, Pool, BBQ Area, 5 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A toUR</a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </main>
 
