--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -293,7 +293,23 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="properties-bern-last">
+                <div class="estate-photo">
+                    <img src="../photos/sixteen.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>555 Oceanside</h1>
+                        <p>Highly Modern, Roof Balcony, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Rooom, Pool, Office Room, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.850.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
