--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -311,6 +311,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-lucerne wrap">
+            <h2>Lucerne Properties</h2>
+        </div>
     </main>
 
    <!--Footer-->
